Спринт №5 Техническое задание исправления после Ревью